--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ contourpy==1.0.6
 cycler==0.11.0
 fonttools==4.38.0
 kiwisolver==1.4.4
+lxml==4.9.2
 matplotlib==3.6.2
 numpy==1.23.5
 packaging==22.0
